[tool.poetry]
name = "del-rio-waterdata"
version = "0.1.0"
description = "Graphing Water Data from the Del Rio Region"
authors = ["jtdub <amascuba@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
numpy = "^1.23.2"
requests = "^2.28.1"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
ipython = "^8.4.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
